--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-    "python.formatting.provider": "black"
+    "python.formatting.provider": "black",
+    "cSpell.words": [
+        "dtype",
+        "dtypes",
+        "Pclass",
+        "showindex",
+        "tablefmt",
+        "usecols"
+    ]
 }
