--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,11 @@
     "cSpell.words": [
         "dtype",
         "dtypes",
+        "figsize",
+        "matplotlib",
         "Pclass",
+        "pyplot",
+        "savefig",
         "showindex",
         "tablefmt",
         "usecols"
