Histogram with tweaks
Histogram with visual tweaks, saves to the current directory.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
         "savefig",
         "showindex",
         "tablefmt",
-        "usecols"
+        "usecols",
+        "xlabel",
+        "ylabel"
     ]
 }
