--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "pyplot",
         "savefig",
         "showindex",
+        "suptitle",
         "tablefmt",
         "usecols",
         "xlabel",
