--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "showindex",
         "skyblue",
         "suptitle",
+        "tabgan",
         "tablefmt",
         "usecols",
         "xlabel",
